--- a/static/payment/pay_info.html
+++ b/static/payment/pay_info.html
@@ -87,7 +87,18 @@
         </div>
     </div>
 </header>
+<div class="wrap">
+    <section class="sub_visual">
+            <div class="section_wrap">
+                <div class="slogan">
+                    <span class="bigSlg ck_title">
+                        구매하기
+                    </span>
 
+                </div>
+                <img class="subVisual codingKit" src="../resource/img/sub/sv_codingKit.png" alt="코딩키트">
+            </div>
+        </section>
 <script>
 
     var IMP = window.IMP; // 생략가능
