--- a/static/payment/order.html
+++ b/static/payment/order.html
@@ -150,9 +150,9 @@
 		}
     </script>
 
-    <div id="orderDiv" > <!--style="display: none" -->
+    <tr id="orderDiv" > <!--style="display: none" -->
          <div class="container margin-top-40">
-             <div class="row">
+             <tr class="row">
                   <div class="col-xs-offset-1 col-xs-10">
                       <div class="row">
                         <div class="col-xs-12">
@@ -327,57 +327,72 @@
                              </div>
                         </div>
                     </div>
+                  </tr>
 
                  <!-- 총금액 -->
-                 <div class="margin-top-40 xans-order-totalsummary">
-                     <table summary>
-                         <colgroup>
-                             <col style="width:23%;">
-                             <col style="width:24%;">
-                             <col style="width:23%;" class="displaynone">
-                             <col style="width:auto;">
-                         </colgroup>
-                         <thead>
-                            <tr>
-                                <th scope="col" class="text-center">
-                                    <span>총 상품 금액</span>
-                                </th>
-                                 <th scope="col" class="text-center">
-                                    <span>총 배송비</span>
-                                </th>
-                                 <th scope="col" class="text-center">
-                                    <span>결제 예상 금액</span>
-                                </th>
-                            </tr>
-                         </thead>
-                         <tbody>
-                         <tr>
-                             <td class="price">
-                                <div class="box">
-                                    <strong>90,000</strong> &nbsp;won
-                                    <span class="tail displaynone"></span>
-                                </div>
-                             </td>
-                             <td class="option">
-                                <div class="box">
-                                    <strong>3,000</strong> &nbsp;won
-                                    <span class="tail displaynone"></span>
-                                </div>
-                             </td>
-                             <td class="total">
-                                <div class="box">
-                                    <strong>93,000</strong>&nbsp;won
-                                    <span class="tail displaynone"></span>
-                                </div>
-                             </td>
-                         </tr>
-                         </tbody>
-                     </table>
-                 </div>
+                 <tr class="row">
+                      <div class="col-xs-offset-1 col-xs-10">
+                          <div class="row">
+                              <div class="col-xs-12">
+                                 <div class="border-radius-none margin-top-30">
+                                      <div>
+                                          <div class="margin-top-40 xans-order-totalsummary">
+                                          <table summary>
+                                             <colgroup>
+                                                 <col style="width:23%;">
+                                                 <col style="width:24%;">
+                                                 <col style="width:23%;" class="displaynone">
+                                                 <col style="width:auto;">
+                                             </colgroup>
+                                             <thead>
+                                                <tr>
+                                                    <th scope="col" class="text-center">
+                                                        <span>총 상품 금액</span>
+                                                    </th>
+                                                     <th scope="col" class="text-center">
+                                                        <span>총 배송비</span>
+                                                    </th>
+                                                     <th scope="col" class="text-center">
+                                                        <span>결제 예상 금액</span>
+                                                    </th>
+                                                </tr>
+                                             </thead>
+                                             <tbody>
+                                             <tr>
+                                                 <td class="price">
+                                                    <div class="box">
+                                                        <strong>90,000</strong> &nbsp;won
+                                                        <span class="tail displaynone"></span>
+                                                    </div>
+                                                 </td>
+                                                 <td class="option">
+                                                    <div class="box">
+                                                        <strong>3,000</strong> &nbsp;won
+                                                        <span class="tail displaynone"></span>
+                                                    </div>
+                                                 </td>
+                                                 <td class="total">
+                                                    <div class="box">
+                                                        <strong>93,000</strong>&nbsp;won
+                                                        <span class="tail displaynone"></span>
+                                                    </div>
+                                                 </td>
+                                             </tr>
+                                             </tbody>
+                                         </table>
+                                     </div>
+                                 </div>
+                              </div>
+                          </div>
+                      </div>
+                    </div>
+                 </tr>
+
 
                  <!-- 결제방법 -->
-                    <div class="container-2 margin-top-40">
-                        <div class="row">
+                 <tr class="row">
+                  <div class="col-xs-offset-1 col-xs-10">
+                        <div>
                             <div class="col-xs-12">
                                  <div class="panel panel-default border-radius-none margin-top-30">
                                       <div class="panel-heading bg-color-gray font-14"><strong>결제방법</strong></div>
@@ -386,7 +401,7 @@
                                                <li>
                                                    <div style="width:100px; padding-right:10px">
                                                         <input type="radio" checked>
-                                                       <span>신용카드</span>
+                                                        <span>신용카드</span>
                                                    </div>
 
                                                </li>
@@ -396,42 +411,46 @@
                             </div>
                         </div>
                     </div>
+                  </tr>
 
                     <!-- 배송지 -->
-                    <div class="container-2 margin-top-40">
-                        <div class="row">
-                            <div class="col-xs-12">
-                                 <div class="panel panel-default border-radius-none margin-top-30">
-                                      <div class="panel-heading bg-color-gray font-14"><strong>배송지</strong></div>
-                                      <div class="panel-body">
-                                           <div class="row">
-                                               <div class="col-xs-7 padding-right-30 border-dashed-right">
-                                           </div>
-                                      </div>
-                                 </div>
+                    <tr class="row">
+                        <div class="col-xs-offset-1 col-xs-10">
+                            <div>
+                                <div class="col-xs-12">
+                                     <div class="panel panel-default border-radius-none margin-top-30">
+                                          <div class="panel-heading bg-color-gray font-14"><strong>배송지</strong></div>
+                                          <div class="panel-body">
+                                               <div class="row">
+                                                   <div class="col-xs-7 padding-right-30 border-dashed-right"></div>
+                                               </div>
+                                          </div>
+                                     </div>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    </div>
+                    </tr>
 
                     <!-- 유의사항 -->
-                    <div class="container-2 margin-top-40">
-                        <div class="row">
-                            <div class="col-xs-12">
-                                 <div class="panel panel-default border-radius-none margin-top-30">
-                                      <div class="panel-heading bg-color-gray font-14"><strong>알려드립니다.</strong></div>
-                                      <div class="panel-body color-light-yellow">
-                                           <div class="row">
-                                               <div class="col-xs-7 padding-right-30 border-dashed-right">
-                                           </div>
-                                      </div>
+                    <tr class="row">
+                        <div class="col-xs-offset-1 col-xs-10">
+                            <div>
+                                <div class="col-xs-12">
+                                     <div class="panel panel-default border-radius-none margin-top-30">
+                                          <div class="panel-heading bg-color-gray font-14"><strong>알려드립니다.</strong></div>
+                                          <div class="panel-body color-light-yellow">
+                                               <div class="row">
+                                                   <div class="col-xs-7 padding-right-30 border-dashed-right"></div>
+                                               </div>
+                                          </div>
+                                     </div>
                                  </div>
                             </div>
                         </div>
-                    </div>
-                    </div>
-                 </div>
-             <div class="btn-center"><a href="#" class="btn order_complete">주문하기</a></div>
+                    </tr>
+
+                  </div>
+                <div class="btn-center"><a href="#" class="btn order_complete">주문하기</a></div>
         </div>
     </div>
 </div>
