--- a/static/payment/order.html
+++ b/static/payment/order.html
@@ -535,22 +535,21 @@
     </div>
 
     <script>
-        // hamberger menu
+
         $('.menu-btn').click(function() {
             $('.line').toggleClass('animate');
         });
-        // hamberger menu
-        // navigation
-<!--        $(document).ready(function() {-->
-<!--            $(".gnbClose, .gnbOpen").on("click", function(){-->
-<!--                $(".gnb").toggleClass("active");-->
-<!--                $(".gnbOpen").toggleClass("gnbClose");-->
-<!--                $("html, body, .wrap").toggleClass("open");-->
-<!--                $('html, body, .wrap').off('scroll touchmove mousewheel');-->
-<!--            });-->
-<!--        });-->
 
          $(document).ready(function() {
+
+            // 쿠키 삭제
+            var cookies = document.cookie;
+            for (var i = 0; i < cookies.split(";").length; ++i)
+            {
+                var myCookie = cookies[i];
+                var pos = myCookie.indexOf("=");
+                var name = pos > -1 ? myCookie.substr(0, pos) : myCookie; document.cookie = name + "=;expires=Thu, 01 Jan 1970 00:00:00 GMT";
+            }
             modify_option_price();
         });
 
@@ -614,10 +613,14 @@
 
 				if (chks[i].checked == true)
 				{
+				    // 여러 상품 중 하나만 배송비 표시하기 위한 변수
 				    first += 1;
 
 				    if(first == 1)
 				        document.getElementById(prd_option_name).innerHTML = "<strong>" + 3000 + "</<strong>";
+				    else
+				        document.getElementById(prd_option_name).innerHTML = "<strong>" + 0 + "</<strong>";
+
 				    prd_price = document.getElementById(prd_price_name).innerText;
 				    count = document.getElementById(quantity_name).value;
                     prd_total_price =  parseInt(prd_price) * count;
