로그인을 위해

--- a/static/lecture/myclass_list.html
+++ b/static/lecture/myclass_list.html
@@ -231,18 +231,10 @@
 
     <script>
     $(document).ready(function() {
-        alert("cookies test");
+        alert("로그인 시킬라고 강제 이동합니다. 개발중..");
 
-        if(document.cookie == "")
-        {
-            alert("로그인이 필요합니다.");
             location.href = "/run_login/";
-        }
-        else
-        {
-
-        }
-    });
+        });
     </script>
 
 </body>
