header,footer 분리 - template 파일들..

--- a/static/lecture/lecture_list.html
+++ b/static/lecture/lecture_list.html
@@ -109,7 +109,7 @@
     <div class="lecture_list">
         <ul>
                 <li class="list01">
-                <a href="lecture_view_arduino.html">
+                <a href="/trashcn_arduino/">
                     <img src="../resource/img/Trashcan/trashcan_main.jpg" alt="코딩키트 썸네일">
                     <div class="text_area">
                             <span>
