--- a/static/lecture/myclass.html
+++ b/static/lecture/myclass.html
@@ -294,16 +294,8 @@
 
     <script>
         $(document).ready(function() {
-
-            if(document.cookie == "")
-            {
-                alert("로그인이 필요합니다.");
+                alert("개발중.. 회원가입하고 쓰시오");
                 location.href = "/run_login/";
-            }
-            else
-            {
-
-            }
         });
 
         // 수량 더하기
