header,footer 분리 - template 파일들..

--- a/static/comunity/coding_comunity.html
+++ b/static/comunity/coding_comunity.html
@@ -39,13 +39,13 @@
 <body>
 <header>
     <div class="header_wrap">
-        <a href="http://ec2-54-180-116-142.ap-northeast-2.compute.amazonaws.com:8000/" class="logo">
+        <a href="/" class="logo">
             <img src="../resource/img/common/logo.png" alt="runcoding">
         </a>
         <!-- gnb -->
         <ul class="menu">
             <li>
-                <a href="../lecture/lecture_list.html">코딩키트</a>
+                <a href="/class/">코딩키트</a>
             </li>
             <li>
                 <a href="../lounge/coding_lounge.html">코딩라운지</a>
@@ -55,7 +55,7 @@
                 <a href="../comunity/coding_comunity.html">커뮤니티</a>
             </li>
             <li>
-                <a href="../lecture/myclass_list.html">나의 강의실</a>
+                <a href="/myclass_list/">나의 강의실</a>
             </li>
         </ul>
         <div class="ab_right">
