--- a/static/lounge/coding_lounge.html
+++ b/static/lounge/coding_lounge.html
@@ -27,6 +27,7 @@
     <link rel="stylesheet" type="text/css" href="../resource/css/reset.css" />
     <link rel="stylesheet" type="text/css" href="../resource/css/common.css" />
     <link rel="stylesheet" type="text/css" href="../resource/css/layout.css" />
+    <link rel="stylesheet" type="text/css" href="../resource/css/main.css">
 <!--<script>-->
 <!--var elearning_url       = "https://www.runcoding.co.kr"; var elearning_bbs_url   = "https://www.runcoding.co.kr/bbs"; var elearning_is_member = ""; var elearning_is_admin  = ""; var elearning_is_mobile = "0"; var elearning_bo_table  = ""; var elearning_sca       = ""; var elearning_editor    = ""; var elearning_cookie_domain = ""; </script>-->
 
